<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="@color/blue_200">


    <TextView
        android:id="@+id/greetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:text="@string/greetings"
        android:textAlignment="center"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/grey_five"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.575" />

    <TextView
        android:id="@+id/current_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/user"
        android:textAlignment="center"
        android:textColor="@color/black_two"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintEnd_toEndOf="@+id/greetings"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/greetings"
        app:layout_constraintTop_toBottomOf="@+id/greetings" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/profile_icon_home_cropped"
        app:layout_constraintBottom_toBottomOf="@+id/current_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/greetings" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_add"
        android:layout_width="350dp"
        android:layout_height="180dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_container"
        android:clipToOutline="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_username">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:alpha="0.6"
            android:clipToOutline="true"
            android:scaleType="fitCenter"
            android:src="@drawable/vector_add_container_100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:alpha="0.6"
            android:clipToOutline="true"
            android:scaleType="fitCenter"
            android:src="@drawable/vector_add_container_200"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />


        <ImageView
            android:id="@+id/blur_image"
            android:layout_width="138dp"
            android:layout_height="120dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/glassy_icon_lotus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.566" />

        <TextView
            android:id="@+id/clock_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="11:00 AM"
            android:textColor="@color/black_two"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.075"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.121" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/home_banner_desc"
            android:textColor="@color/grey_five"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintEnd_toEndOf="@+id/clock_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/clock_text"
            app:layout_constraintTop_toBottomOf="@+id/clock_text" />

        <com.dicoding.soothemate.customviews.CustomButton
            android:id="@+id/calculate_btn"
            android:layout_width="140dp"
            android:layout_height="35dp"
            android:text="@string/start_calculate"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:elevation="12dp"
            android:outlineAmbientShadowColor="@color/blue_500"
            android:outlineSpotShadowColor="@color/blue_600"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/blur_image"
            app:layout_constraintHorizontal_bias="0.404"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintVertical_bias="0.661" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.dicoding.soothemate.customviews.CircularProgressView
        android:id="@+id/circularProgressView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="52dp"
        app:layout_constraintStart_toStartOf="@+id/container_add"
        app:layout_constraintTop_toBottomOf="@+id/container_add" />

    <TextView
        android:id="@+id/stressLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:fontFamily="@font/poppins_bold"
        android:textSize="36sp"
        android:textColor="@color/blue_600"
        app:layout_constraintBottom_toBottomOf="@+id/circularProgressView"
        app:layout_constraintEnd_toEndOf="@+id/circularProgressView"
        app:layout_constraintStart_toStartOf="@+id/circularProgressView"
        app:layout_constraintTop_toTopOf="@+id/circularProgressView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="220dp"
        android:layout_height="80dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/rounded_container"
        app:layout_constraintEnd_toEndOf="@+id/container_add"
        app:layout_constraintTop_toBottomOf="@+id/container_add">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/your_current_stress_level"
            android:textSize="10sp"
            android:textColor="@color/grey_five"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="44dp"
            android:layout_height="4dp"
            android:src="@drawable/blue_bar"
            app:layout_constraintBottom_toBottomOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toTopOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/today"
            android:textColor="@color/black_two"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/stressLevel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintBottom_toBottomOf="@+id/textView11"
            app:layout_constraintEnd_toEndOf="@+id/imageView6"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toStartOf="@+id/imageView6"
            app:layout_constraintTop_toBottomOf="@+id/imageView6"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_container"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/keep_on_track_and_improve_on_your_stress_level"
            android:textAlignment="center"
            android:textSize="10sp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/grey_five"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.dicoding.soothemate.customviews.CustomButton
        android:id="@+id/history_btn"
        android:layout_width="206dp"
        android:layout_height="49dp"
        android:layout_marginBottom="6dp"
        android:text="@string/history"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/history_btn_desc"
        android:textAlignment="center"
        android:textColor="@color/grey_five"
        android:textSize="12sp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/history_btn"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="@+id/history_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>